hwbi/disc/css/mainstyle.css
/* ... */
.service-card {
  background: #fff;
  border-radius: 2px;
  display: inline-block;
  height: 300px;
  margin: .5%;
  margin-bottom: 3%;
  position: relative;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.service-card:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.service-card img {
  height: 100%;
  filter: brightness(40%);
  opacity: .9;
  width: 100%;
}

/* .modal{
  margin: 0;
  padding: 40px;
  background: white;
  border-radius: 3px;
  width: 79vw;
  position: absolute;
  top: 98px;
  left: 213px;
  height: 85%;
  box-shadow: 0 1px 16px rgba(0,0,0,0.12), 0 6px 10px rgba(0,0,0,0.24);
} */

.modal{
  margin: 0 auto;
  padding: 40px;
  background: white;
  border-radius: 3px;
  width: 80vw;
  max-width: 1000px;
  position: relative;
  top: 70px;
  height: 80vh;
  box-shadow: 0 1px 16px rgba(0,0,0,0.12), 0 6px 10px rgba(0,0,0,0.24);
  text-align:left;
}

.modal .close{
  position: absolute;
  top: 20px;
  right: 30px;
  font-size: 30px;
  font-weight: bold;
  text-decoration: none;
  color: #333;
}

.modal h2{
  font-family: Tahoma, Arial, sans-serif;
  color: #333;
  margin-top: 0;
}

.modal .modalcontent{
  max-height: 80%;
  overflow: auto;
  font-family: sans-serif;
}

.modal-overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.64);
  transition: opacity 250ms;
  visibility: hidden;
  opacity: 0;
  z-index: 9;
  width: 100vw;
}

.modal-overlay:target{
  visibility: visible;
  opacity: 1;
}

.returnlink {
  position: absolute;
  right: 5%;
  bottom: 5%;
  color: #0071bc;
}

.rankinglist {
  list-style-type: none;
  display: inline;
}

.rankinglist li {
  display: inline;
  font-size: 17px;
}

.rankinglist form input, div[id*='_priority_ranking'] form input {
  border: none;
  padding-left: 25px;
  width: 60px;
  float:right;
/*   position: absolute;
  left: 23%; */
}

.rankinglist form input[type=number]::-webkit-inner-spin-button{
  opacity: 1;
}

.ranking-list-container {
  /* margin-bottom: 5%; */
  /* margin-top: 10%; */
  /* float: right; */
  /* display: flex; */
  /* text-align: right; */
  width: 250px;
  display: inline-block;
}

.show-baseline {
  background-color: #A6A6A6;
  /*border: 2px solid #0071bc;*/
  color: white;
  padding: 11px 12px;
  float:right;
  display: inline-block;
  font-family: sans-serif;
  font-size: 14px;
  font-weight: bold;
  text-decoration: none;
}

.show-baseline:hover {
  background-color:#235A8E;
  color: white;
}


/* aster plot */
.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.bar {
  fill: orange;
}

.solidArc:hover {
  fill: orangered ;
}

.solidArc {
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
}

.x.axis path {
  display: none;
}

.aster-score { 
  line-height: 1;
  font-weight: bold;
  font-size: 200%;
}

.d3-tip {
  line-height: 1;
  font-weight: bold;
  padding: 12px;
  background: rgba(0, 0, 0, 0.8);
  color: #fff;
  border-radius: 2px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
  box-sizing: border-box;
  display: inline;
  font-size: 10px;
  width: 100%;
  line-height: 1;
  color: rgba(0, 0, 0, 0.8);
  content: "\25BC";
  position: absolute;
  text-align: center;
}

/* Style northward tooltips differently */
.d3-tip.n:after {
  margin: -1px 0 0 0;
  top: 100%;
  left: 0;
}

#aster > svg {
  display: block;
  margin: auto;
}

/* end aster */

#resources-tab ul li a {
  color: #0071bc;
  /* padding-left: 10px; */
}

#resources-tab ul li a:hover {
  color: #205493;
}

#resources-tab p {
  padding-bottom: 10px;
}

#resources-tab {
  margin-bottom: 5%;
}

.services {
  /* margin: 0 auto; */
  /* width: 60%; */
  width: 100%;
}


/**********SERVICES TABS***********/


.services-nav {
  height: auto;

  width: 100%;
  margin: auto;
}

ul.services-tabs {
  /* width: 350px; */
  display: flex;
  margin: 0 auto;
  padding: 0;
  z-index: -1;
  /* margin-bottom: -3px; */
  justify-content: center;
}

ul.services-tabs li {
  cursor: pointer;
  float: left;
  list-style-type: none;
  padding: 10px 25px 10px 25px;
  text-align: center;
}

ul.services-tabs li:hover {
  background-color: #dfdfdf;

}

.current-tab {
  padding-bottom: 5px;
}

.services-tabs-container {
  width: 100%;
  height: auto;
  margin: auto;
  margin-top: 5%;
  position: relative;
  left: 10%;
}

#tab1 {
  display: block;
  padding: 8px;
}

#tab2 {
  display: none;
  padding: 8px;
}

#tab3 {
  display: none;
  padding: 8px;
}

li.current-tab {
  border-bottom: 3px solid #0071bc;
}

.services-tabs-container label input {
  display: flex;
  margin-bottom: 10%;
}

.services-tabs-container label span {
  font-size: 14px;
}

hr.s-tabs-below {
  background: #ccc;
  border: 0;
  height: 1px;
  margin: 0 0 1.5em;
  /* width: 375px; */
}

/************SLIDERS************/

/* reset default sliders */
input[type="range"] {
  -webkit-appearance: none;
  /* Hides the slider so that custom slider can be made */
  width: 100%; /* 60% */
  /* Specific width is required for Firefox. */
}
input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
}
input[type="range"]:focus {
  outline: none;
  /* Removes the blue border. */
}
input[type="range"]::-ms-track {
  width: 100%;
  cursor: pointer;
  background: transparent;
  /* Hides the slider so custom styles can be added */
  border-color: transparent;
  color: transparent;
}
/* end reset */

input[type="range"]::-webkit-slider-runnable-track {
  height: .25rem;
  margin: .875rem 0;
  background: #ccc;
  border: none;
}
input[type="range"]::-moz-range-track {
  height: .25rem;
  margin: .875rem 0;
  background: #ccc;
  border: none;
}
input[type="range"]::-ms-track {
  height: .25rem;
  margin: .875rem 0;
  background: #ccc;
  border: none;
}
/* ... */

